force-app/main/default/objects/AV_Bypass__c/AV_Bypass__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration to skip batch process, logs, validation rules,...
Activate the maintenance mode in Salesforce</description>
    <label>AV_Bypass</label>
</CustomObject>