force-app/main/default/objects/AV_Bypass__c/fields/AV_ForbiddenWords__c.field-meta.xml
<CustomField>
    <fullName>AV_ForbiddenWords__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controla si se ejecutan las validaciones de las palabras prohibidas en los triggers.</description>
    <label>Forbidden Words Validation</label>
    <type>Checkbox</type>
</CustomField>