force-app/main/default/objects/AV_Bypass__c/fields/AV_MaxQueueSize__c.field-meta.xml
<CustomField>
    <fullName>AV_MaxQueueSize__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Numero maximo de queueables</description>
    <label>Max Queues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>