force-app/main/default/objects/AV_Bypass__c/fields/AV_SalesOld__c.field-meta.xml
<CustomField>
    <fullName>AV_SalesOld__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Esto activara los metodos Old de en el trigger de Ventas y quitara la funcionalidad nueva</description>
    <inlineHelpText>Esto activara los metodos Old de en el trigger de Ventas y quitara la funcionalidad nueva</inlineHelpText>
    <label>Ventas Old</label>
    <type>Checkbox</type>
</CustomField>