force-app/main/default/objects/AV_Bypass__c/fields/CIBE_BMMMaxQueueSize__c.field-meta.xml
<CustomField>
    <fullName>CIBE_BMMMaxQueueSize__c</fullName>
    <description>Numero maximo de registros por cada queueable.</description>
    <label>CIB&amp;EMP - Max Queue Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>