force-app/main/default/objects/AV_Bypass__c/fields/CIBE_MaxQueueSize__c.field-meta.xml
<CustomField>
    <fullName>CIBE_MaxQueueSize__c</fullName>
    <description>Numero maximo de queueables</description>
    <label>CIB&amp;EMP - Max Queues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>