force-app/main/default/objects/AV_Bypass__c/fields/LogInfo__c.field-meta.xml
<CustomField>
    <fullName>LogInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true the logging is print in the log (info mode).
            If false the logging isn&apos;t print in the log (info mode).</description>
    <inlineHelpText>True -&gt; print the logging
            False -&gt; no print the logging</inlineHelpText>
    <label>LogInfo</label>
    <type>Checkbox</type>
</CustomField>