force-app/main/default/objects/AV_Bypass__c/fields/Migration_Activated__c.field-meta.xml
<CustomField>
    <fullName>Migration_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Migration process is activated when the value is true</description>
    <inlineHelpText>Migration process is activated when the value is true</inlineHelpText>
    <label>Migration Activated</label>
    <type>Checkbox</type>
</CustomField>