force-app/main/default/objects/AV_Bypass__c/fields/Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true then all the validation rules will be skipped.</description>
    <inlineHelpText>True -&gt; skip all validation rules
False -&gt; execution the validation rules</inlineHelpText>
    <label>Validation Rules</label>
    <type>Checkbox</type>
</CustomField>